After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695304 - GtkTextView: don't popdown a bubble if we don't have one
GtkTextView: don't popdown a bubble if we don't have one
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkTextView
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 695364 695653 696233 696401 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-03-06 16:08 UTC by Giovanni Campagna
Modified: 2013-03-22 16:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkTextView: don't popdown a bubble if we don't have one (892 bytes, patch)
2013-03-06 16:08 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-03-06 16:08:48 UTC
This causes a segfault.
Comment 1 Giovanni Campagna 2013-03-06 16:08:50 UTC
Created attachment 238210 [details] [review]
GtkTextView: don't popdown a bubble if we don't have one
Comment 2 Cosimo Cecchi 2013-03-06 16:15:03 UTC
Review of attachment 238210 [details] [review]:

Makes sense.
Comment 3 Giovanni Campagna 2013-03-06 16:19:13 UTC
Attachment 238210 [details] pushed as ca2368d - GtkTextView: don't popdown a bubble if we don't have one
Comment 4 Emmanuele Bassi (:ebassi) 2013-03-07 15:34:02 UTC
*** Bug 695364 has been marked as a duplicate of this bug. ***
Comment 5 Benjamin Berg 2013-03-12 00:26:57 UTC
*** Bug 695653 has been marked as a duplicate of this bug. ***
Comment 6 Cosimo Cecchi 2013-03-21 12:38:35 UTC
*** Bug 696233 has been marked as a duplicate of this bug. ***
Comment 7 Emmanuele Bassi (:ebassi) 2013-03-22 16:41:05 UTC
*** Bug 696401 has been marked as a duplicate of this bug. ***