GtkTextView: don't popdown a bubble if we don't have one

This causes a segfault.

https://bugzilla.gnome.org/show_bug.cgi?id=695304